upgraded to java 14 and updated all dependencies